jd/id_verification_fix

--- a/app.json
+++ b/app.json
@@ -12,7 +12,10 @@
     "newArchEnabled": true,
 
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "Tander needs access to your camera to scan your ID card for age verification."
+      }
     },
 
     "android": {
@@ -21,7 +24,12 @@
         "backgroundColor": "#FFFFFF"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "usesCleartextTraffic": true,
+      "package": "com.tanderapp",
+      "permissions": [
+        "CAMERA"
+      ]
     },
 
     "web": {
@@ -39,7 +47,14 @@
           "backgroundColor": "#ffffff",
           "dark": { "backgroundColor": "#000000" }
         }
-      ]
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Tander needs access to your camera to scan your ID card for age verification."
+        }
+      ],
+      "./plugins/withAndroidNetworkSecurityConfig.js"
     ],
 
     "experiments": {
