--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~54.0.25",
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.9",
+    "expo-camera": "^17.0.9",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -48,6 +49,7 @@
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.2",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "yup": "^1.7.1"
   },
