--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~54.0.25",
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.9",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -30,6 +31,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-local-authentication": "~17.0.7",
+    "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
