--- a/app.json
+++ b/app.json
@@ -1,3 +1,58 @@
+// {
+//   "expo": {
+//     "name": "TanderApp",
+//     "slug": "TanderApp",
+//     "version": "1.0.0",
+//     "orientation": "portrait",
+//     "icon": "./src/assets/icon.png",
+//     "scheme": "tanderapp",
+//     "userInterfaceStyle": "automatic",
+//     "newArchEnabled": true,
+//     "ios": {
+//       "supportsTablet": true,
+//       "bundleIdentifier": "com.anonymous.TanderApp",
+//       "infoPlist": {
+//         "ITSAppUsesNonExemptEncryption": false
+//       }
+//     },
+//     "android": {
+//       "adaptiveIcon": {
+//         "foregroundImage": "./src/assets/icon.png",
+//         "backgroundColor": "#FFFFFF"
+//       },
+//       "edgeToEdgeEnabled": true,
+//       "predictiveBackGestureEnabled": false,
+//       "package": "com.anonymous.TanderApp"
+//     },
+//     "web": {
+//       "output": "static",
+//       "favicon": "./src/assets/icon.png"
+//     },
+//     "plugins": [
+//       [
+//         "expo-splash-screen",
+//         {
+//           "image": "./src/assets/icon.png",
+//           "imageWidth": 200,
+//           "resizeMode": "contain",
+//           "backgroundColor": "#ffffff",
+//           "dark": {
+//             "backgroundColor": "#000000"
+//           }
+//         }
+//       ]
+//     ],
+//     "experiments": {
+//       "typedRoutes": true,
+//       "reactCompiler": true
+//     },
+//     "extra": {
+//       "eas": {
+//         "projectId": "31806c49-df01-475b-9fc1-fe6eb7b72cdb"
+//       }
+//     }
+//   }
+// }
 {
   "expo": {
     "name": "TanderApp",
@@ -8,26 +63,65 @@
     "scheme": "tanderapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.anonymous.TanderApp",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+
+        /* CAMERA & MICROPHONE (WebRTC) */
+        "NSCameraUsageDescription": "TanderApp needs access to your camera for video calls, photos, and profile verification.",
+        "NSMicrophoneUsageDescription": "TanderApp needs access to your microphone for audio and video calls.",
+        "NSBluetoothAlwaysUsageDescription": "Bluetooth is needed for connecting AirPods or Bluetooth headsets during calls.",
+        "UIBackgroundModes": ["audio"],
+
+        /* LOCATION (future mating system & proximity features) */
+        "NSLocationWhenInUseUsageDescription": "TanderApp uses your location to show matches nearby.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Background location allows features like continuous distance updates when enabled.",
+
+        /* PHOTO & MEDIA PERMISSIONS */
+        "NSPhotoLibraryAddUsageDescription": "TanderApp needs access to save photos.",
+        "NSPhotoLibraryUsageDescription": "TanderApp needs access to your photos to upload your profile images.",
+
+        /* NOTIFICATIONS (future messaging + call ringing) */
+        "NSUserNotificationAlertStyle": "alert"
       }
     },
+
     "android": {
+      "package": "com.anonymous.TanderApp",
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/icon.png",
         "backgroundColor": "#FFFFFF"
       },
+      "permissions": [
+        /* WebRTC Permissions */
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+
+        /* LOCATION (future feature) */
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+
+        /* VIBRATION / NOTIFICATIONS */
+        "android.permission.VIBRATE",
+        "android.permission.POST_NOTIFICATIONS",
+
+        /* STORAGE (image upload future) */
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
+      ],
+      "useNextNotificationsApi": true,
+      // "googleServicesFile": "./google-services.json",
+      "blockedPermissions": [],
+      "softwareKeyboardLayoutMode": "pan",
+      "allowBackup": true,
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.anonymous.TanderApp"
+      "predictiveBackGestureEnabled": false
     },
-    "web": {
-      "output": "static",
-      "favicon": "./src/assets/icon.png"
-    },
+
     "plugins": [
       [
         "expo-splash-screen",
@@ -36,16 +130,37 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
+          "dark": { "backgroundColor": "#000000" }
         }
-      ]
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "TanderApp needs access to your camera for video calls.",
+          "microphonePermission": "TanderApp needs access to your microphone for calls."
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationPermission": "TanderApp uses your location to show people near you."
+        }
+      ],
+      "expo-notifications",
+      "expo-file-system",
+      "expo-image-picker"
     ],
+
+    "web": {
+      "favicon": "./src/assets/icon.png",
+      "output": "static"
+    },
+
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
     },
+
     "extra": {
       "eas": {
         "projectId": "31806c49-df01-475b-9fc1-fe6eb7b72cdb"
