--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
-    "expo-image-picker": "^17.0.8",
+    "expo-image-picker": "~17.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-local-authentication": "~17.0.7",
+    "expo-location": "~19.0.8",
+    "expo-notifications": "~0.32.14",
     "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
