full integration for functionality

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.21",
+    "@react-navigation/native": "^7.1.25",
+    "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.7",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
@@ -37,6 +38,7 @@
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.14",
     "expo-screen-orientation": "~9.0.7",
+    "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -47,6 +49,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.1",
