--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~54.0.25",
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.9",
+    "expo-av": "~16.0.8",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.20",
@@ -51,6 +52,7 @@
     "react-native": "0.81.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-incall-manager": "^4.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
