--- a/eas.json
+++ b/eas.json
@@ -1,4 +1,27 @@
 
+// {
+//   "cli": {
+//     "version": ">= 3.0.0"
+//   },
+//   "build": {
+//     "development": {
+//       "developmentClient": true,
+//       "distribution": "internal",
+//       "android": {
+//         "buildType": "apk"
+//       },
+//       "ios": {
+//         "simulator": false
+//       }
+//     },
+//     "simulator": {
+//       "ios": {
+//         "simulator": true
+//       }
+//     }
+//   }
+// }
+
 {
   "cli": {
     "version": ">= 3.0.0"
@@ -13,6 +36,13 @@
       "ios": {
         "simulator": false
       }
+    },
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      },
+      "distribution": "internal",
+      "developmentClient": false
     },
     "simulator": {
       "ios": {
