--- a/app.json
+++ b/app.json
@@ -26,12 +26,15 @@
         "NSUserNotificationAlertStyle": "alert"
       }
     },
+    
     "android": {
+       "googleServicesFile": "./google-services.json",
       "package": "com.anonymous.TanderApp",
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/icon.png",
         "backgroundColor": "#FFFFFF"
       },
+      
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO",
@@ -55,43 +58,91 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
+    // "plugins": [
+    //   [
+    //    "@react-native-firebase/app",
+    //     "@react-native-firebase/crashlytics"
+    //   ],
+    //   [
+    //     "expo-splash-screen",
+    //     {
+    //       // "image": "./src/assets/icon.png",
+    //       "image": null,
+    //       "imageWidth": 200,
+    //       "resizeMode": "contain",
+    //       "backgroundColor": "#F6E3C5"
+    //       // "dark": {
+    //       //   "backgroundColor": "#000000"
+    //       // }
+    //     }
+
+    //   ],
+    //   [
+    //     "expo-camera",
+    //     {
+    //       "cameraPermission": "TanderApp needs access to your camera for video calls.",
+    //       "microphonePermission": "TanderApp needs access to your microphone for calls."
+    //     }
+    //   ],
+    //   [
+    //     "expo-location",
+    //     {
+    //       "locationPermission": "TanderApp uses your location to show people near you."
+    //     }
+    //   ],
+    //   "expo-notifications",
+    //   "expo-file-system",
+    //   "expo-image-picker",
+    //   "expo-secure-store",
+    //   [
+    //     "expo-local-authentication",
+    //     {
+    //       "faceIDPermission": "Allow TanderApp to use Face ID for quick sign-in."
+    //     }
+    //   ]
+    // ],
     "plugins": [
-      [
-        "expo-splash-screen",
-        {
-          "image": "./src/assets/icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
-        }
-      ],
-      [
-        "expo-camera",
-        {
-          "cameraPermission": "TanderApp needs access to your camera for video calls.",
-          "microphonePermission": "TanderApp needs access to your microphone for calls."
-        }
-      ],
-      [
-        "expo-location",
-        {
-          "locationPermission": "TanderApp uses your location to show people near you."
-        }
-      ],
-      "expo-notifications",
-      "expo-file-system",
-      "expo-image-picker",
-      "expo-secure-store",
-      [
-        "expo-local-authentication",
-        {
-          "faceIDPermission": "Allow TanderApp to use Face ID for quick sign-in."
-        }
-      ]
-    ],
+  "@react-native-firebase/app",
+  "@react-native-firebase/crashlytics",
+
+  [
+    "expo-splash-screen",
+    {
+      // "image": null,
+      "image": "./src/assets/icon.png",
+      "imageWidth": 200,
+      "resizeMode": "contain",
+      "backgroundColor": "#F6E3C5"
+    }
+  ],
+
+  [
+    "expo-camera",
+    {
+      "cameraPermission": "TanderApp needs access to your camera for video calls.",
+      "microphonePermission": "TanderApp needs access to your microphone for calls."
+    }
+  ],
+
+  [
+    "expo-location",
+    {
+      "locationPermission": "TanderApp uses your location to show people near you."
+    }
+  ],
+
+  "expo-notifications",
+  "expo-file-system",
+  "expo-image-picker",
+  "expo-secure-store",
+
+  [
+    "expo-local-authentication",
+    {
+      "faceIDPermission": "Allow TanderApp to use Face ID for quick sign-in."
+    }
+  ]
+],
     "web": {
       "favicon": "./src/assets/icon.png",
       "output": "single",
