--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/crashlytics": "^23.7.0",
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.25",
